update axios to non-vulnerable version

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint"
   ],
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "1.7.4",
     "mongodb": "^6.3.0",
     "winston": "^3.11.0"
   },
