--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint"
   ],
   "dependencies": {
-    "axios": "1.7.4",
+    "axios": "^1.8.4",
     "mongodb": "^6.3.0",
     "winston": "^3.11.0"
   },
